# CodeEntropy

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .setup.py.swp  CITATION.cff  CODE_OF_CONDUCT.md  Lysozyme - main branch.ipynb  Lysozyme Example - updated code.ipynb  README.md  config.yaml  parallel.diff  pyproject.toml  readthedocs.yml  setup.py  version_check.py
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: CI.yaml  coveralls-main.yaml  daily.yaml  mdanalysis-compatability-matrix.yaml  mdanalysis-compatibility.yaml  pr.yaml  project-ci.yaml  publish-on-pypi.yaml  release.yaml  renovate.yaml  update_regression_baselines.yaml  weekly-docs.yaml  weekly-regression.yaml
CodeEntropy/: CodeEntropy.py  ConformationEntity.py  ConformationFunctions.py  CustomDataTypes.py  CustomFunctions.py  EntropyFunctions.py  GeometricFunctions.py  LevelFunctions.py  MDAUniverseHelper.py  NeighbourFunctions.py  PoseidonHelper.py  RAD.py  RelativeAngularDistance.py  UnitsAndConversions.py  Utils.py  WriteForces.py  Writer.py  __init__.py  __main__.py  _version.py  axes.py  cli.py  dihedral_tools.py  entropy.py  group_molecules.py  levels.py  main.py  main_mcc.py  mda_universe_operations.py  neighbors.py  run.py
CodeEntropy/ClassCollection/: BeadClasses.py  BondStructs.py  DataContainer.py  PoseidonClass.py
CodeEntropy/FunctionCollection/: CustomFunctions.py  EntropyFunctions.py  GeometricFunctions.py  LevelFunctions.py  Utils.py  test.py  untitled0.py
CodeEntropy/calculations/: ConformationFunctions.py  EntropyFunctions.py  LevelFunctions.py  (+4 more)
Example/: AtomLevel_bead_entropy.csv  Capped_protein_Example_dask.ipynb  CodeEntropy_DNA.py  CodeEntropy_non_topo.py  CodeEntropy_topo.py  Poseidon_GROMACS.py  Poseidon_LAMMPS.py  create_new_universe.py  mcc_mdanalysis.py  mcc_mdanalysis_multi_processing.py  molecule_entropy_result.csv
conda-recipe/: meta.yaml
docs/: Makefile  README.md  api.rst  community_guide.rst  conf.py  config.yaml  developer_guide.rst  faq.rst  getting_started.rst  index.rst  science.rst
scripts/: CodeEntropy  CodeEntropyPoseidon
tests/: pytest.ini  test_main.py
(+609 files in other folders)
